WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87266
[Qt][WK2] Fix bounce-back animation on pinch->pan transition
https://bugs.webkit.org/show_bug.cgi?id=87266
Summary
[Qt][WK2] Fix bounce-back animation on pinch->pan transition
Andras Becsi
Reported
2012-05-23 08:12:16 PDT
If ending an out-of-bounds pinch gesture with releasing one finger (transition to a pan gesture), the bounce back animation blinks in the end position immediately first, then animates the content back into bounds.
Attachments
proposed patch
(1.68 KB, patch)
2012-05-23 08:31 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-05-23 08:31:00 PDT
Created
attachment 143574
[details]
proposed patch
Kenneth Rohde Christiansen
Comment 2
2012-05-24 01:36:05 PDT
Comment on
attachment 143574
[details]
proposed patch Good catch
Andras Becsi
Comment 3
2012-05-24 03:14:45 PDT
Comment on
attachment 143574
[details]
proposed patch Clearing flags on attachment: 143574 Committed
r118341
: <
http://trac.webkit.org/changeset/118341
>
Andras Becsi
Comment 4
2012-05-24 03:14:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug