[Qt][WK2] Fix bounce-back animation on pinch->pan https://bugs.webkit.org/show_bug.cgi?id=87266

Reviewed by Kenneth Rohde Christiansen.

If ending an out-of-bounds pinch gesture with releasing one finger
(transition to a pan gesture) the bounce back animation blinks in
the end position immediately first, then animates the content back
into bounds.

QtViewportInteractionEngine::cancelScrollAnimation should return
early if there is no active kinetic animation.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::cancelScrollAnimation):

Canonical link: https://commits.webkit.org/105110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118341 268f45cc-cd09-0410-ab3c-d52691b4dbfc