Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp
@@ -533,6 +533,9 @@ bool QtViewportInteractionEngine::scaleAnimationActive() const
 
 void QtViewportInteractionEngine::cancelScrollAnimation()
 {
+    if (!scrollAnimationActive())
+        return;
+
     // If the pan gesture recognizer receives a touch begin event
     // during an ongoing kinetic scroll animation of a previous
     // pan gesture, the animation is stopped and the content is
